--- a/.github/workflows/discussion_comment_notification.yml
+++ b/.github/workflows/discussion_comment_notification.yml
@@ -50,3 +50,20 @@ jobs:
             <p>Discussion content: <pre>${{ github.event.discussion.body }}</pre></p>
           to: ${{ secrets.EMAIL_TO }}
           from: GitHub Notifications <${{ secrets.EMAIL_USERNAME }}>
+
+      - name: Send success notification
+        if: success()
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.qq.com
+          server_port: 465
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.EMAIL_PASSWORD }}
+          subject: "GitHub Actions Run Succeeded"
+          html_body: |
+            <p>The GitHub Actions workflow ran successfully.</p>
+            <p>Event: ${{ github.event_name }}</p>
+            <p>Repository: ${{ github.repository }}</p>
+            <p>Workflow: ${{ github.workflow }}</p>
+          to: ${{ secrets.EMAIL_TO }}
+          from: GitHub Notifications <${{ secrets.EMAIL_USERNAME }}>
