--- a/.github/workflows/discussion_comment_notification.yml
+++ b/.github/workflows/discussion_comment_notification.yml
@@ -31,10 +31,10 @@ jobs:
           html_body: |
             <p>A new action was performed on a discussion: <a href="${{ github.event.discussion.html_url }}">${{ github.event.discussion.title }}</a></p>
             <p>Action type: <b>${{ github.event_name }}</b></p>
-            {{ if github.event_name == 'discussion_comment' }}
+            ${{ if github.event_name == 'discussion_comment' }}
             <p>Comment by: <b>${{ github.event.comment.user.login }}</b></p>
             <p>Comment content: <pre>${{ github.event.comment.body }}</pre></p>
-            {{ endif }}
+            ${{ endif }}
           to: ${{ secrets.EMAIL_TO }}
           from: GitHub Notifications <${{ secrets.EMAIL_USERNAME }}>
 
