--- a/.github/workflows/discussion_comment_notification.yml
+++ b/.github/workflows/discussion_comment_notification.yml
@@ -27,12 +27,12 @@ jobs:
           server_port: 465
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: ${{ github.event_name == 'discussion' && github.event.action == 'created' ? 'New Discussion Created' : 'New Comment on Discussion' }}
+          subject: ${{ github.event_name == 'discussion' && github.event.action == 'created' && 'New Discussion Created' || 'New Comment on Discussion' }}
           html_body: |
             <p>A new action was performed on a discussion: <a href="${{ github.event.discussion.html_url }}">${{ github.event.discussion.title }}</a></p>
             <p>Action type: <b>${{ github.event_name }}</b></p>
-            <p v-if="github.event_name == 'discussion_comment'">Comment by: <b>${{ github.event.comment.user.login }}</b></p>
-            <p v-if="github.event_name == 'discussion_comment'">Comment content: <pre>${{ github.event.comment.body }}</pre></p>
+            ${{ github.event_name == 'discussion_comment' && '<p>Comment by: <b>' + github.event.comment.user.login + '</b></p>' || '' }}
+            ${{ github.event_name == 'discussion_comment' && '<p>Comment content: <pre>' + github.event.comment.body + '</pre></p>' || '' }}
           to: ${{ secrets.EMAIL_TO }}
           from: GitHub Notifications <${{ secrets.EMAIL_USERNAME }}>
 
