--- a/.github/workflows/discussion_comment_notification.yml
+++ b/.github/workflows/discussion_comment_notification.yml
@@ -2,6 +2,8 @@ name: Discussion Comment Notification
 on:
   discussion_comment:
     types: [created, edited]
+  discussion:
+    types: [created]
   issue_comment:
     types: [created]
 jobs:
@@ -33,22 +35,5 @@ jobs:
             <p>Action type: <b>${{ github.event_name }}</b></p>
             ${{ github.event_name == 'discussion_comment' && format('<p>Comment by: <b>{0}</b></p>', github.event.comment.user.login) || '' }}
             ${{ github.event_name == 'discussion_comment' && format('<p>Comment content: <pre>{0}</pre></p>', github.event.comment.body) || '' }}
-          to: ${{ secrets.EMAIL_TO }}
-          from: GitHub Notifications <${{ secrets.EMAIL_USERNAME }}>
-
-      - name: Send success notification
-        if: success()
-        uses: dawidd6/action-send-mail@v3
-        with:
-          server_address: smtp.qq.com
-          server_port: 465
-          username: ${{ secrets.EMAIL_USERNAME }}
-          password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: "GitHub Actions Run Succeeded"
-          html_body: |
-            <p>The GitHub Actions workflow ran successfully.</p>
-            <p>Event: ${{ github.event_name }}</p>
-            <p>Repository: ${{ github.repository }}</p>
-            <p>Workflow: ${{ github.workflow }}</p>
           to: ${{ secrets.EMAIL_TO }}
           from: GitHub Notifications <${{ secrets.EMAIL_USERNAME }}>
