--- a/.github/workflows/discussion_comment_notification.yml
+++ b/.github/workflows/discussion_comment_notification.yml
@@ -29,11 +29,14 @@ jobs:
           server_port: 465
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: ${{ github.event_name == 'discussion' && github.event.action == 'created' && 'New Discussion Created' || 'New Comment on Discussion' }}
+          subject: ${{ github.event_name == 'discussion' && 'New Discussion Created' || 'New Comment on Discussion' }}
           html_body: |
             <p>A new action was performed on a discussion: <a href="${{ github.event.discussion.html_url }}">${{ github.event.discussion.title }}</a></p>
+            <p>Category: <b>${{ github.event.discussion.category.name }}</b></p>
             <p>Action type: <b>${{ github.event_name }}</b></p>
             ${{ github.event_name == 'discussion_comment' && format('<p>Comment by: <b>{0}</b></p>', github.event.comment.user.login) || '' }}
             ${{ github.event_name == 'discussion_comment' && format('<p>Comment content: <pre>{0}</pre></p>', github.event.comment.body) || '' }}
+            ${{ github.event_name == 'discussion' && format('<p>Discussion content: <pre>{0}</pre></p>', github.event.discussion.body) || '' }}
+            <p>Created at: <b>${{ github.event.discussion.created_at }}</b></p>
           to: ${{ secrets.EMAIL_TO }}
           from: GitHub Notifications <${{ secrets.EMAIL_USERNAME }}>
