--- a/.github/workflows/discussion_comment_notification.yml
+++ b/.github/workflows/discussion_comment_notification.yml
@@ -21,12 +21,6 @@ jobs:
             echo "::set-output name=trigger::none"
           fi
 
-      - name: Debug event data
-        run: |
-          echo "Event name: ${{ github.event_name }}"
-          echo "Discussion URL: ${{ github.event.discussion.html_url }}"
-          echo "Comment body: ${{ github.event.comment.body }}"
-
       - name: Send email notification for discussion actions
         if: github.event_name == 'discussion' || github.event_name == 'discussion_comment'
         uses: dawidd6/action-send-mail@v3
@@ -35,7 +29,7 @@ jobs:
           server_port: 465
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: ${{ github.event_name == 'discussion' && format('New Discussion: {0}', github.event.discussion.title) || format('New Mention in Discussion: {0}', github.event.discussion.title) }}
+          subject: ${{ github.event_name == 'discussion' && 'New Discussion Created' || 'New Comment on Discussion' }}
           html_body: |
             <p>A new action was performed on a discussion: <a href="${{ github.event.discussion.html_url }}">${{ github.event.discussion.title }}</a></p>
             <p>Category: <b>${{ github.event.discussion.category.name }}</b></p>
@@ -45,22 +39,6 @@ jobs:
             ${{ github.event_name == 'discussion' && format('<p>Discussion content: <pre>{0}</pre></p>', github.event.discussion.body) || '' }}
             <p>Created at: <b>${{ github.event.discussion.created_at }}</b></p>
           to: ${{ secrets.EMAIL_TO }}
-          from: GitHub Notifications <${{ secrets.EMAIL_USERNAME }}>
-
-      - name: Send failure notification
-        if: failure()
-        uses: dawidd6/action-send-mail@v3
-        with:
-          server_address: smtp.qq.com
-          server_port: 465
-          username: ${{ secrets.EMAIL_USERNAME }}
-          password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: "GitHub Actions Workflow Failed"
-          html_body: |
-            <p>The GitHub Actions workflow failed.</p>
-            <p>Repository: ${{ github.repository }}</p>
-            <p>Workflow: ${{ github.workflow }}</p>
-            <p>Event: ${{ github.event_name }}</p>
-            <p>Error details: <pre>${{ github.event }}</pre></p>
-          to: ${{ secrets.EMAIL_TO }}
+          cc: ${{ secrets.EMAIL_CC }}
+          bcc: ${{ secrets.EMAIL_BCC }}
           from: GitHub Notifications <${{ secrets.EMAIL_USERNAME }}>
